src/test/resources/semantic/error/TC_ERROR_DOBLE_IMPL.ru
/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 5 | COLUMNA 8 | La estructura 'A' se ha implementado más de una vez. | 

struct A{

}

impl A{
    fn m1()->void{

    }
}
impl A{
    fn m2()->void{

    }
}

start{
    
}